syntax = "proto3";

package notification;

option go_package = "github.com/darkphotonKN/community-builds-microservice/common/api/proto/notification";

import "google/protobuf/timestamp.proto";

service ExampleService {
  // get list of notifications for user
  rpc GetNotificationsResponse(GetNotificationsRequest) returns (Notifications) {}
}

message Notifications {
  repeated Notification data = 1;
}

message Notification {
  string id = 1;
  string memberId = 2;
  string type = 3;
  string title = 4;
  string message = 5;
  bool read = 6;
  bool emailSent = 7;
  string sourceId = 8;
  google.protobuf.Timestamp created_at = 9;
}

// Request message for getting an example by ID
message GetNotificationsRequest {
  string memberId = 1;
  int32 limit = 2;        
  int32 offset = 3;      
} 
